# rmake

./: Cargo.toml  README.md  update.sh
src/: lib.rs  main.rs
