[package]
name = "rmake"
version = "0.2.0"
authors = ["NazrinDuck"]
edition = "2021"
description = "A conveninet and flexiable make tool for .c/cpp files"
readme = "README.md"
homepage = "https://github.com/NazrinDuck/rmake"
repository = "https://github.com/NazrinDuck/rmake"
keywords = ["cli", "demo"]
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
colored="1.7.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
